[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "motorAccelerationPlanner"
readme = "ReadMe.md"
description = "A very limited inverse kinematics library to compute rectangles of accelerations and deccelerations in order to achieve desired position on 1D axis, taking into account speed and acceleration limits"
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["motorAccelerationPlanner"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KOLANICH-physics/motorAccelerationPlanner.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["motorAccelerationPlanner", "motorAccelerationPlanner.*"]

[tool.setuptools_scm]
